# Calculator-rs

./: .gitignore  Cargo.toml  Cross.toml  HyprCalc-0.2-1-x86_64.pkg.tar.zst  PKGBUILD  README.md  flake.nix  oxicalc-0.2-1-x86_64.pkg.tar.zst  oxicalc.desktop
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/workflows/: rust.yaml
nix/: default.nix  hm.nix
pkg/HyprCalc/: .BUILDINFO  .MTREE  .PKGINFO
src/: calculator.rs  gui.rs  main.rs  tests.rs
