[package]
name = "hyprcalc"
version = "1.0.0"
authors = ["dashie <fabio.lenherr@gmail.com>"]
description = "A small, simple calculator written in rust/gtk4"
license = "GPL-3.0-only"
repository = "https://github.com/DashieTM/Calculator-rs"
edition = "2021"

[dependencies]
gtk4 = { version = "0.6.0" }
adw = {package = "libadwaita", version = "0.3"}
toml = "0.7.3"
glib = "*"
directories-next = "*"

