[package]
name = "oxicalc"
version = "0.1.2"
authors = ["dashie <fabio.lenherr@gmail.com>"]
description = "A small, simple calculator written in rust/gtk4"
license = "GPL-3.0-only"
repository = "https://github.com/DashieTM/oxicalc"
edition = "2021"

[dependencies]
gtk4 = { version = "0.6.0" }
adw = {package = "libadwaita", version = "0.3"}
toml = "0.7.3"
glib = "0.17.5"
directories-next = "2.0.0"

