[package]
name = "oxicalc"
version = "0.2.2"
authors = ["dashie <fabio.lenherr@gmail.com>"]
description = "A small, simple calculator written in rust/gtk4"
license = "GPL-3.0-only"
repository = "https://github.com/DashieTM/oxicalc"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8.1" }
adw = {package = "libadwaita", version = "0.6"}
toml = "0.8.12"
glib = "0.19.4"
directories-next = "2.0.0"

